5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4385/executions/1892_3180.log
== TEST (2019-07-09 18:38:38) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range (v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:38:42) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range (v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
0.99157
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range (v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:39:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range (v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:40:35) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:40:45) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
1.3533
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:40:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
1.52768
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:40:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
1.89933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:40:47) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
4.49175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:41:54) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
1.58214
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:41:54) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
1.61423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:42:59) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	(v[i]==1):
		a=a+1
	(v[i]==2):
		b=b+1
	(v[i]==3):
		c=c+1
	(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
File "XXXX", line 9
    (v[i]==1):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:43:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:43:32) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(v):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
0.915695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1892/3180/main.py", line 8, in <module>
    for i in range(v):
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:44:47) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(size(v)):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 18:44:51) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(size(v)):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:44:52) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(size(v)):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
0.861906
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 2]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 1]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
digite: [4 4 4 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 18:45:01) 
-- CODE:
from numpy import*
v=array(eval(input("digite: ")))
a=0
b=0
c=0
d=0
z=zeros(4,dtype=int)
for i in range(size(v)):
	if(v[i]==1):
		a=a+1
	if(v[i]==2):
		b=b+1
	if(v[i]==3):
		c=c+1
	if(v[i]==4):
		d=d+1
z[0]=a
z[1]=b
z[2]=c
z[3]=d
print(z)

-- EXECUTION TIME:
0.754926
-- TEST CASE 1:
---- input:
[1,2,3,4,3,2,1,2,3,2,4,1]
---- correct output:
[3 4 3 2]
---- user output:
[3 4 3 2]
-- TEST CASE 2:
---- input:
[1,3,3,4,1,3,1]
---- correct output:
[3 0 3 1]
---- user output:
[3 0 3 1]
-- TEST CASE 3:
---- input:
[1,2,3,4,1,2,3,4,1,2,3,4,1,2,3,4]
---- correct output:
[4 4 4 4]
---- user output:
[4 4 4 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
